<resources>
    <string name="app_name">HealingLand</string>
    <string name="login">Login</string>
    <string name="fill_your_email">Fill your Email and Password to Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="or_sign_in_with">OR Sign in With</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="i_don_t_have_an_account">I don\'t have an account </string>
    <string name="register">Register</string>
    <string name="login_image">Login Image</string>
    <string name="healing_land">Healing Land</string>
    <string name="love_our_environment_always">Love our Environment Always</string>
    <string name="made">Made in Sri Lanka 🇱🇰</string>
    <string name="first_activity">firstActivity</string>
    <string name="next">Next</string>
    <string name="you_have_to_create_an_account_in_our_app">First, You Have to Create an Account in Our App</string>
    <string name="first">First,</string>
    <string name="start_planting">Start Planting</string>
    <string name="we_help_you_grow_and_care_your_plant_ease">We help you grow and care your plant ease</string>
    <string name="event_name">Event Name</string>
    <string name="add_up_your_event_to_the_feed">Add Up Your Event To The Feed</string>
    <string name="event_Name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="coordinator_name">Coordinator Name</string>
    <string name="coordinator_number">Coordinator Number</string>
    <string name="upload_a_photo_for_promote_your_event">Upload a photo for promote your event</string>
    <string name="dates">Date</string>
    <string name="time">Time</string>
    <string name="get_your_tips">Get Your Tips</string>
    <string name="add_garden_tips">Add Garden Tips</string>
    <string name="fertilizing_tip">Fertilizing Tip</string>
    <string name="planting_tip">Planting Tip</string>
    <string name="water">Water</string>
    <string name="plant_type">Plant Type</string>
    <string name="botanical_name">Botanical Name</string>
    <string name="plant_name">Plant Name</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="tips">Tips</string>
    <string name="shop">Shop</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="care_protect_prevent">Care Protect Prevent</string>
    <string name="buy_and_heal_your_lovely_land">Buy And Heal Your Lovely Land</string>
    <string name="market">Market</string>
    <string name="events">Events</string>
    <string name="diseases">Diseases</string>
    <string name="edit_garden_tips">Edit Garden Tips</string>
    <string name="update">Update</string>
    <string name="red_rose">Red Rose</string>
    <string name="add_plant_diseases">Add Plant Diseases</string>
    <string name="disease_name">Disease Name</string>
    <string name="disease_description">Disease Description</string>
    <string name="how_to_prevent_disease">How To Prevent Disease</string>
    <string name="add_plant_disease_details">Add Plant Disease Details</string>
    <string name="update_plant_disease_details">Update Plant Disease Details</string>
    <string name="edit_your_event">Edit Your Event</string>
    <string name="visit_page">Visit Page</string>
    <string name="plant_distribution">Plant Distribution</string>
    <string name="descriptionevent">descriptionEvent</string>
    <string name="venuee">Venue :</string>
    <string name="times">Time :</string>
    <string name="dat">Date :</string>
    <string name="add_plant_details">Add Plant Details</string>
    <string name="plant_price">Plant Price</string>
    <string name="plant_description">Plant Description</string>
    <string name="quantity">Quantity</string>
    <string name="upload_a_photo_of_your_plant">Upload a photo of your plant</string>
    <string name="edit_plant_details">Edit Plant Details</string>
    <string name="plant_update">Update</string>
    <string name="select_your_plant_type">Select Your Plant Type</string>
    <string name="tree_plants">Tree Plants</string>
    <string name="vegetable_plants">Vegetable Plants</string>
    <string name="fruit_plants">Fruit Plants</string>
    <string name="herbal_plants">Herbal Plants</string>
    <string name="add_your_payment_details">Add Your Payment Details</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="save_card_details">Save Card Details</string>
    <string name="email">Email</string>
    <string name="fill_your_details_to_register">Fill your details to Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="plantation_events">Plantation Events</string>
    <string name="add_events">Add Events</string>
    <string name="cure_and_prevent_plant_diseases">Cure and Prevent Plant Diseases</string>
    <string name="plant_diseases_home">Plant Diseases Home</string>
    <string name="plant_diseases">Plant Diseases</string>
    <string name="bacterial_spot">Bacterial Spot</string>
    <string name="anthracnose">Anthracnose</string>
    <string name="apple_scab">Apple Scab</string>
    <string name="bacterial_spot_description">Bacterial spot can be a devastating disease when the weather is warm and humid. The disease can affect all above-ground p arts of tomato and pepper plants: stems, petioles, leaves, and fruits.</string>
    <string name="bacterial_spot_prevent">Use clean propagation material and disease-free seed. In field-grown tomato and pepper rotate fields to prevent infection from volunteer plants and crop debris.</string>
    <string name="care">Care</string>
    <string name="esay">Esay</string>
    <string name="every_4_7_days">Every 4 - 7 Days</string>
    <string name="sun">Sun</string>
    <string name="part">Part</string>
    <string name="rose">Rose</string>
    <string name="hardy_gerbra">Hardy Gerbera</string>
    <string name="petunia_pink">Petunia Pink</string>
    <string name="event_id">Event ID</string>
    <string name="add_new_disease">Add New Disease</string>
    <string name="disease_cause">Disease Cause</string>
    <string name="delete">Delete</string>
    <string name="bacterial_spot_can_be_a_devastating_disease_when_the_weather_is_warm_and_humid_the_disease_can_affect_all_above_ground_parts_of_tomato_and">Bacterial spot can be a devastating disease when the weather is warm and humid. The disease can affect all above-ground parts of tomato and</string>
    <string name="use_clean_propagation_material_and_disease_free_seed_in_field_grown_tomato_and_pepper_rotate">Use clean propagation material and disease-free seed. In field-grown tomato and pepper rotate</string>
    <string name="four_species_of_xanthomonas">four species of Xanthomonas</string>
    <string name="plant_code">Plant Code</string>
    <string name="event_id">Event Id</string>
</resources>