<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    tools:ignore="MissingClass">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/home_background"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="213dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/market"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button3"
            android:fontFamily="@font/poppins_family"
            android:text="@string/market"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_round_shopping_bag_24"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            />

        <Button
            android:id="@+id/tips"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button3"
            android:fontFamily="@font/poppins_family"
            android:text="@string/tips"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_round_tips_and_updates_24"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/events"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button3"
            android:fontFamily="@font/poppins_family"
            android:text="@string/events"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_round_event_24"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/diseases"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button3"
            android:fontFamily="@font/poppins_family"
            android:text="@string/diseases"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_round_shield_24"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_family"
        android:text="@string/care_protect_prevent"
        android:textAlignment="center"
        android:textColor="@color/heading"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_family"
        android:text="@string/buy_and_heal_your_lovely_land"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/heading"
        android:textSize="21sp"
        android:textStyle="bold" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>