<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiseasesHome">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/plant_diseases_home"
        android:foregroundGravity="left"
        android:src="@drawable/background_decoration"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-2dp" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints,UselessLeaf,UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_family"
            android:text="@string/cure_and_prevent_plant_diseases"
            android:textAlignment="center"
            android:textColor="@color/heading"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/loginImage"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/login_image"
            android:src="@drawable/diseases_home" />

        <Button
            android:id="@+id/diseasesVisit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/poppins_family"
            android:text="@string/visit_page"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>