<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPlantType">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="MissingConstraints,UselessLeaf,UselessParent">

        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="243dp"
            android:layout_height="80dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/poppins_family"
            android:text="@string/select_your_plant_type"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="58dp" />

        <ImageView
            android:layout_width="384dp"
            android:layout_height="240dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/login_image"
            android:foregroundGravity="left"
            android:src="@drawable/select_plant_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="-2dp" />

        <Button
            android:id="@+id/treePlants"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/poppins_family"
            android:text="@string/tree_plants"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/vegetablePlants"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/poppins_family"
            android:text="@string/vegetable_plants"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fruitPlants"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/poppins_family"
            android:text="@string/fruit_plants"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/herbalPlants"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/poppins_family"
            android:text="@string/herbal_plants"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_image"
        android:foregroundGravity="left"
        android:src="@drawable/background_decoration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>